tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoQuestLine__BeesTemplate-AAAAAAAAAAAAAAAAAAAIbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2159,
  "prerequisites": [
    3247
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Get the princess bee and reward bag in NEI first.\nCopy this quest.\nPress Icon and set the icon to the bee.\nChange the name, description, and rewards.\n\nPress Task, and select the stone, and replace it with the princess.\nBefore closing, select the ... next to the bee name and press Raw NBT\nGo into Tag, Genome, Chromosomes. The first one is the name and must stay.\nGo inside there and delete the first entry, keep both of the species so players\nmust have purebreeds.\nDelete the rest of the chromosomes.\nDelete the rest of the entries for Genome.\n\nPress Requirements. Remove the Infinity unlock requirement and select the required bee quests. Use the common bees quest if nothing applies.\n\nChange Show:Hidden to Show:Normal.\n\nTo reduce waste in the questbook file ideally you should also go into the advanced options, then press ... for the icon, and remove unnecessary NBT there as well. Just leave the species as above.\n\n§3You can change the visibility of requirements by pressing the eye symbol in the requirements menu.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bees Template",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "HIDDEN"
  },
  "required_prerequisites": [
    3247
  ],
  "rewards": [],
  "tasks": []
}
