tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoQuestLine__ToolNevercomplet-AAAAAAAAAAAAAAAAAAAMrw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3247,
  "prerequisites": [
    405
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This quest should never be complete which is useful to hide templates and other things.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": true,
    "locked_progress": 0,
    "name": "Tool: Never complete",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "HIDDEN"
  },
  "required_prerequisites": [
    405
  ],
  "rewards": [],
  "tasks": []
}
