tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoQuestLine__TriggerElectricB-SsBfuluoR5m5D-dEuoKgsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6604607579123523762,
  "prerequisites": [
    238
  ],
  "properties": {
    "auto_claim": true,
    "desc": "",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": true,
    "locked_progress": 0,
    "name": "Trigger: Electric Boots of the Traveller Skip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    238
  ],
  "rewards": [],
  "tasks": []
}
